--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -62,9 +62,10 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="70dp"
-        android:backgroundTint="#58E978"
-        android:textColor="@color/black"
-        android:fontFamily="@font/roboto_regular"
+        android:backgroundTint="#4E7771"
+        android:textColor="@color/white"
+        android:textSize="16dp"
+        android:fontFamily="@font/roboto_bold"
         android:text="Ubah Password"
         app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldPass" />
 
