--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -79,7 +79,7 @@
     <Button
         android:id="@+id/btn_editpassword"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="70dp"
         android:backgroundTint="#4E7771"
