--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -56,10 +56,30 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/confirm_password"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="16dp"
+        android:hint="Password Baru"
+        android:fontFamily="@font/roboto_regular"
+        android:textSize="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldPass">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
     <Button
         android:id="@+id/btn_editpassword"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="70dp"
         android:backgroundTint="#4E7771"
@@ -67,6 +87,6 @@
         android:textSize="16dp"
         android:fontFamily="@font/roboto_bold"
         android:text="Ubah Password"
-        app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldPass" />
+        app:layout_constraintTop_toBottomOf="@id/confirm_password" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
