--- a/app/src/main/res/layout/activity_prediksi.xml
+++ b/app/src/main/res/layout/activity_prediksi.xml
@@ -24,25 +24,25 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_signInGreet1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:fontFamily="@font/roboto_bold"
-        android:text="Cegah Stunting"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/logo" />
-
-    <TextView
         android:id="@+id/tv_signInGreet2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:fontFamily="@font/roboto_regular"
-        android:text="Prediksi Sekarang"
+        android:textSize="16dp"
+        android:text="Pilih Anak"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_signInGreet1" />
+        app:layout_constraintTop_toBottomOf="@id/logo" />
+
+    <Spinner
+        android:id="@+id/choose_clhild"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:entries="@array/child"
+        android:layout_marginHorizontal="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_signInGreet2" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/outlinedTextFieldEmail"
@@ -56,7 +56,7 @@
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signInGreet2">
+        app:layout_constraintTop_toBottomOf="@+id/choose_clhild">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -148,7 +148,7 @@
     <Button
         android:id="@+id/btn_prediksi"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="10dp"
         android:backgroundTint="#4E7771"
