--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/img_news"
+            android:id="@+id/img_item_news"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:src="@drawable/vektor_sayuran"
@@ -27,8 +27,8 @@
             android:textColor="@color/black"
             android:layout_marginStart="10dp"
             android:text="Genre"
-            app:layout_constraintStart_toEndOf="@+id/img_news"
-            app:layout_constraintTop_toTopOf="@+id/img_news"/>
+            app:layout_constraintStart_toEndOf="@+id/img_item_news"
+            app:layout_constraintTop_toTopOf="@+id/img_item_news"/>
 
         <TextView
             android:id="@+id/deskripsi_news"
@@ -41,7 +41,7 @@
             android:textSize="16dp"
             android:maxLines="2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/img_news"
+            app:layout_constraintStart_toEndOf="@+id/img_item_news"
             app:layout_constraintTop_toBottomOf="@+id/genre" />
 
 
