--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -20,7 +20,7 @@
         android:id="@+id/stunting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/poppins_bold"
         android:textColor="@color/black"
         android:text="STUNTING"
         android:textSize="50dp"
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Anak Anda Terdeteksi Stunting"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/poppins_bold"
         android:textSize="30dp"
         android:textColor="@color/black"
         android:gravity="center"
@@ -47,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Segera periksa ke dokter untuk pemeriksaan lebih lanjut!"
-        android:fontFamily="@font/roboto_regular"
+        android:fontFamily="@font/poppins_regular"
         android:textSize="30dp"
         android:textColor="@color/black"
         android:gravity="center"
