--- a/app/src/main/res/layout/activity_detail_news.xml
+++ b/app/src/main/res/layout/activity_detail_news.xml
@@ -23,12 +23,12 @@
         android:layout_marginHorizontal="15dp"
         android:text="Perbedaan 4 Sehat 5 Sempurna dan Pedoman Gizi Seimbang"
         android:textColor="@color/black"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/poppins_bold"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="220dp" />
+        tools:layout_editor_absoluteY="200dp" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
@@ -56,27 +56,34 @@
             android:layout_marginHorizontal="10dp"
             android:text="CNN Indonesia"
             android:textColor="@color/black"
-            android:fontFamily="@font/roboto_bold"
+            android:fontFamily="@font/poppins_bold"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="@+id/logo_news"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/logo_news"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/deskripsi"
+        <ScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginHorizontal="15dp"
-            android:text="Deskripsi"
-            android:textColor="@color/black"
-            android:fontFamily="@font/roboto_regular"
-            android:textSize="16dp"
             android:layout_marginTop="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/logo_news" />
+            app:layout_constraintTop_toBottomOf="@+id/logo_news">
+
+            <TextView
+                android:id="@+id/deskripsi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Deskripsi"
+                android:textColor="@color/black"
+                android:fontFamily="@font/poppins_regular"
+                android:textSize="16dp" />
+
+        </ScrollView>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
