--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -24,7 +24,7 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="16dp"
         android:hint="Password Lama"
-        android:fontFamily="@font/roboto_regular"
+        android:fontFamily="@font/poppins_regular"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="16dp"
         android:hint="Password Baru"
-        android:fontFamily="@font/roboto_regular"
+        android:fontFamily="@font/poppins_regular"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,8 +63,8 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="16dp"
-        android:hint="Password Baru"
-        android:fontFamily="@font/roboto_regular"
+        android:hint="Confirm Password"
+        android:fontFamily="@font/poppins_regular"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +85,7 @@
         android:backgroundTint="#4E7771"
         android:textColor="@color/white"
         android:textSize="16dp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/poppins_bold"
         android:text="Ubah Password"
         app:layout_constraintTop_toBottomOf="@id/confirm_password" />
 
