--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -24,7 +24,7 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="16dp"
         android:hint="Nama Lengkap"
-        android:fontFamily="@font/roboto_regular"
+        android:fontFamily="@font/poppins_regular"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="16dp"
         android:hint="Email"
-        android:fontFamily="@font/roboto_regular"
+        android:fontFamily="@font/poppins_regular"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="16dp"
         android:hint="Nomor HP"
-        android:fontFamily="@font/roboto_regular"
+        android:fontFamily="@font/poppins_regular"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +85,7 @@
         android:backgroundTint="#4E7771"
         android:textColor="@color/white"
         android:textSize="16dp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/poppins_bold"
         android:text="Ubah Profile"
         app:layout_constraintTop_toBottomOf="@id/edit_nomor_hp" />
 
