--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
                         android:id="@+id/day"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/roboto_regular"
+                        android:fontFamily="@font/poppins_regular"
                         android:text="Day"
                         android:textColor="@color/white"
                         android:textSize="16dp"
@@ -54,7 +54,7 @@
                         android:layout_height="wrap_content"
                         android:text="Hallo,"
                         android:textColor="@color/white"
-                        android:fontFamily="@font/roboto_bold"
+                        android:fontFamily="@font/poppins_bold"
                         android:textSize="30dp"
                         android:layout_marginStart="15dp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
                         android:id="@+id/username"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/roboto_bold"
+                        android:fontFamily="@font/poppins_bold"
                         android:text="Username"
                         android:textColor="@color/white"
                         android:layout_marginStart="15dp"
@@ -75,59 +75,59 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/kategori"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Kategori"
-                android:textSize="30dp"
-                android:layout_marginTop="10dp"
-                android:fontFamily="@font/roboto_bold"
-                android:textColor="@color/black"
-                android:layout_marginHorizontal="10dp"
-                app:layout_constraintTop_toBottomOf="@id/top"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+<!--            <TextView-->
+<!--                android:id="@+id/kategori"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Kategori"-->
+<!--                android:textSize="30dp"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:fontFamily="@font/roboto_bold"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:layout_marginHorizontal="10dp"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/top"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent" />-->
 
-            <HorizontalScrollView
-                android:id="@+id/horizontal_sv_news"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                app:layout_constraintTop_toBottomOf="@id/kategori"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
+<!--            <HorizontalScrollView-->
+<!--                android:id="@+id/horizontal_sv_news"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/kategori"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent">-->
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+<!--                <LinearLayout-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:orientation="horizontal">-->
 
-                    <ImageView
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
-                        android:layout_marginHorizontal="10dp"
-                        android:src="@drawable/bakso" />
+<!--                    <ImageView-->
+<!--                        android:layout_width="200dp"-->
+<!--                        android:layout_height="200dp"-->
+<!--                        android:layout_marginHorizontal="10dp"-->
+<!--                        android:src="@drawable/bakso" />-->
 
-                    <ImageView
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
-                        android:layout_marginHorizontal="10dp"
-                        android:src="@drawable/bakso" />
+<!--                    <ImageView-->
+<!--                        android:layout_width="200dp"-->
+<!--                        android:layout_height="200dp"-->
+<!--                        android:layout_marginHorizontal="10dp"-->
+<!--                        android:src="@drawable/bakso" />-->
 
-                    <ImageView
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
-                        android:layout_marginHorizontal="10dp"
-                        android:src="@drawable/bakso" />
+<!--                    <ImageView-->
+<!--                        android:layout_width="200dp"-->
+<!--                        android:layout_height="200dp"-->
+<!--                        android:layout_marginHorizontal="10dp"-->
+<!--                        android:src="@drawable/bakso" />-->
 
-                    <ImageView
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
-                        android:layout_marginHorizontal="10dp"
-                        android:src="@drawable/bakso" />
-                </LinearLayout>
-            </HorizontalScrollView>
+<!--                    <ImageView-->
+<!--                        android:layout_width="200dp"-->
+<!--                        android:layout_height="200dp"-->
+<!--                        android:layout_marginHorizontal="10dp"-->
+<!--                        android:src="@drawable/bakso" />-->
+<!--                </LinearLayout>-->
+<!--            </HorizontalScrollView>-->
 
             <TextView
                 android:id="@+id/news"
@@ -139,7 +139,7 @@
                 android:textColor="@color/black"
                 android:layout_marginTop="15dp"
                 android:layout_marginHorizontal="8dp"
-                app:layout_constraintTop_toBottomOf="@id/horizontal_sv_news"
+                app:layout_constraintTop_toBottomOf="@id/top"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
@@ -149,6 +149,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="10dp"
+                tools:listitem="@layout/item_news"
                 app:layout_constraintTop_toBottomOf="@id/news"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
