--- a/app/src/main/res/layout/activity_prediksi.xml
+++ b/app/src/main/res/layout/activity_prediksi.xml
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
-        android:fontFamily="@font/roboto_regular"
+        android:fontFamily="@font/poppins_regular"
         android:textSize="16dp"
         android:text="Pilih Anak"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,6 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="16dp"
         android:hint="Berat Badan (Kg)"
-        android:fontFamily="@font/roboto_regular"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +61,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_regular"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -74,7 +74,6 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="16dp"
         android:hint="Tinggi Badan (m)"
-        android:fontFamily="@font/roboto_regular"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +81,8 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_regular"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -100,6 +100,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
+            android:fontFamily="@font/poppins_regular"
             android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -112,7 +113,7 @@
         android:text="Menyusui"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/roboto_regular"
+        android:fontFamily="@font/poppins_regular"
         android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldUmur"/>
@@ -133,14 +134,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Menyusui"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/poppins_regular"
                 android:textSize="16dp"
                 android:layout_weight="1"/>
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tidak Menyusui"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/poppins_regular"
                 android:textSize="16dp"
                 android:layout_weight="1"/>
         </RadioGroup>
@@ -156,7 +157,7 @@
         android:backgroundTint="#4E7771"
         android:textColor="@color/white"
         android:textSize="16dp"
-        android:fontFamily="@font/roboto_bold"
+        android:fontFamily="@font/poppins_bold"
         android:text="Prediksi"
         app:layout_constraintTop_toBottomOf="@id/radio" />
 
