--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -38,7 +38,7 @@
                     android:id="@+id/your_profile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/roboto_bold"
+                    android:fontFamily="@font/poppins_bold"
                     android:text="Your Profile"
                     android:textColor="@color/white"
                     android:textSize="30dp"
@@ -84,7 +84,7 @@
             android:text="Edit Profile"
             android:textSize="16dp"
             android:textColor="@color/black"
-            android:fontFamily="@font/roboto_regular"
+            android:fontFamily="@font/poppins_regular"
             android:layout_marginStart="5dp"/>
     </LinearLayout>
 
@@ -108,7 +108,7 @@
             android:text="Ubah Password"
             android:textSize="16dp"
             android:textColor="@color/black"
-            android:fontFamily="@font/roboto_regular"
+            android:fontFamily="@font/poppins_regular"
             android:layout_marginStart="5dp"/>
     </LinearLayout>
 
@@ -132,7 +132,7 @@
             android:textColor="@color/black"
             android:text="Edit Keluarga"
             android:textSize="16dp"
-            android:fontFamily="@font/roboto_regular"
+            android:fontFamily="@font/poppins_regular"
             android:layout_marginStart="5dp"/>
     </LinearLayout>
 
@@ -156,7 +156,7 @@
             android:textColor="@color/black"
             android:text="Keluar"
             android:textSize="16dp"
-            android:fontFamily="@font/roboto_regular"
+            android:fontFamily="@font/poppins_regular"
             android:layout_marginStart="5dp"/>
     </LinearLayout>
 
