--- a/app/src/main/res/layout/activity_edit_password.xml
+++ b/app/src/main/res/layout/activity_edit_password.xml
@@ -31,6 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/logo">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/pw_lama"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -51,6 +52,7 @@
         app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldEmail">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/pw_baru"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -71,6 +73,7 @@
         app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldPass">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/confirm_pw_baru"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
