--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -31,6 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/logo">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/nama"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -51,6 +52,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_nama">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -71,13 +73,14 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_email">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/hp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btn_editpassword"
+        android:id="@+id/btn_editprofile"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginHorizontal="32dp"
