--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -11,7 +11,7 @@
         android:icon="@drawable/baseline_calendar_month_24"/>
 
     <item
-        android:id="@+id/prediksi"
+        android:id="@+id/predict"
         android:title="Prediksi"
         android:icon="@drawable/baseline_batch_prediction_24"/>
 
