--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -100,6 +100,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Get food recommendation"
+        android:drawableEnd="@drawable/baseline_play_arrow_24"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="15dp"
         android:backgroundTint="#4E7771"
